feat: add createVolunteer

--- a/backend/src/PetProject.API/PetProject.API.csproj
+++ b/backend/src/PetProject.API/PetProject.API.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PetProject.Application\PetProject.Application.csproj" />
+    <ProjectReference Include="..\PetProject.Contracts\PetProject.Contracts.csproj" />
     <ProjectReference Include="..\PetProject.Domain\PetProject.Domain.csproj" />
     <ProjectReference Include="..\PetProject.Infrastructure\PetProject.Infrastructure.csproj" />
   </ItemGroup>
