feat: add Serilog and Exception Middleware

--- a/backend/src/PetProject.API/appsettings.json
+++ b/backend/src/PetProject.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=host;Port=port;Database=database;Username=username;Password=password"
+    "Database": "Host=host;Port=port;Database=database;Username=username;Password=password",
+    "Seq": "address"
   },
   "AllowedHosts": "*"
 }
