--- a/backend/src/PetProject.API/docker-compose.yml
+++ b/backend/src/PetProject.API/docker-compose.yml
@@ -11,6 +11,16 @@
     - 5434:5432
     volumes:
     - postgres-data:/var/lib/postgresql/data
+  seq:
+    container_name: seq
+    image: datalust/seq
+    restart: always
+    environment:
+    - ACCEPT_EULA=Y
+    - SEQ_FIRSTRUN_NOAUTHENTICATION=true
+    ports:
+    - 5341:5341
+    - 8081:80
   
 volumes:
   postgres-data:
